--- a/index.html
+++ b/index.html
@@ -5,9 +5,34 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>myWeb</title>
+    <link rel="stylesheet" href="">
+
 </head>
 <body>
-    
+    <header>
+        <div class="wrapper">
+            <div class="logo">
+                <img src="" alt="Logo">
+            </div>
+            <ul class="nav area">
+            <li><a href="">Home</a> </li>
+            <li><a href="">About Me</a> </li>  
+            <li><a href="">Contact</a> </li>  
+            <li><a href="">Article</a></li>  
+ 
+            </ul>
+        </div>
+        <div class="welcome">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+             Quia et expedita numquam dolore sint,
+             nulla illo illum autem iure sequi alias eum architecto,
+            est esse nisi labore mollitia fugiat recusandae.</p>
+            <a href="">More About Me</a>
+        </div>
+        <div class="profile">
+            <img src="Photos/Profile.jpg" alt="">¨
+        </div>
+    </header>
 </body>
 </html>
 
