--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>myWeb</title>
-    <link rel="stylesheet" href="">
+    <link rel="stylesheet" href="style.css">
 
 </head>
 <body>
@@ -14,13 +14,16 @@
             <div class="logo">
                 <img src="" alt="Logo">
             </div>
-            <ul class="nav area">
+            <ul class="nav-area">
             <li><a href="">Home</a> </li>
             <li><a href="">About Me</a> </li>  
             <li><a href="">Contact</a> </li>  
             <li><a href="">Article</a></li>  
- 
+            <li><a href="">Log In</a></li>
             </ul>
+        </div>
+        <div class="login">
+            <li><a href="">Log In</a></li>
         </div>
         <div class="welcome">
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
@@ -30,7 +33,7 @@
             <a href="">More About Me</a>
         </div>
         <div class="profile">
-            <img src="Photos/Profile.jpg" alt="">¨
+            <img src="Profile.jpg" alt="">¨
         </div>
     </header>
 </body>
