--- a/index.html
+++ b/index.html
@@ -24,12 +24,11 @@
             </ul>
         </div>
         <div class="login">
-        <button style="position: static;
+        <button style="
         width: 97px;
         height: 35px;
-        left: 16px;
-        top: 8px;
         mix-blend-mode:soft-light;
+        float: left;
         
         font-family: Work Sans;
         font-style: normal;
@@ -39,7 +38,8 @@
         text-align: center;
         letter-spacing: -0.02em;
         
-        color: #C4C4C4">Log In</button>
+        color: #C4C4C4"
+        onclick="location.href='login.html';" >Log In</button>
         </div>
         <div class="welcome">
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
