--- a/login.html
+++ b/login.html
@@ -10,6 +10,37 @@
 
 </head>
 <body>
+    <header>
+        <div class="wrapper">
+            <div class="logo">
+               <h1>PPaccy</h1>
+            </div>
+            <ul class="nav-area" >
+            <li><a href="">Home</a> </li>
+            <li><a href="">About Me</a> </li>  
+            <li><a href="">Contact</a> </li>  
+            <li><a href="">Article</a></li>  
+            </ul>
+        </div>
+        <div class="login">
+        <button style="
+        width: 97px;
+        height: 35px;
+        mix-blend-mode:soft-light;
+        float: left;
+        
+        font-family: Work Sans;
+        font-style: normal;
+        font-weight: bold;
+        font-size: 30px;
+        line-height: 35px;
+        text-align: center;
+        letter-spacing: -0.02em;
+        
+        color: #C4C4C4"
+        onclick="location.href='login.html';" >Log In</button>
+        </div>
+    </header>
     <div class="center">
         <h1>Login</h1>
         <form method="post">
