--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <ul class="nav-area" >
             <li><a href="">Home</a> </li>
             <li><a href="">About Me</a> </li>  
-            <li><a href="">Contact</a> </li>  
+            <li><a href="contact.html">Contact</a> </li>  
             <li><a href="">Article</a></li>  
             </ul>
         </div>
