--- a/blogpage.html
+++ b/blogpage.html
@@ -10,7 +10,19 @@
     <title>BlogPage</title>
 </head>
 <body>
-    <a class="back" href="/index.html"><span class="iconify" data-icon="dashicons:controls-back" data-width="40" data-height="40"></span></a>
+    <div class="wrapper">
+        <div class="logo">
+           <h1> <span>P</span>Paccy</h1>
+        </div>
+        <ul class="nav-area" >
+        <li><a href="/index.html">Home</a> </li>
+        <li><a href="/index.html">About Me</a> </li>  
+        <li><a href="contact.html">Contact</a> </li>  
+        <li><a href="/blogpage.html">Article</a></li>
+        <li><button onclick="location.href='login.html';" >Log In</button> </li>
+        </ul>
+    </div>
+    <!--<a class="back" href="/index.html"><span class="iconify" data-icon="dashicons:controls-back" data-width="40" data-height="40"></span></a>-->
     <section id="blog">
         <div class="blog-heading">
             <span>My Recent Articles</span>
