--- a/contact.html
+++ b/contact.html
@@ -10,6 +10,18 @@
     <script src="https://code.iconify.design/2/2.1.2/iconify.min.js"></script>
 </head>
 <body>
+    <div class="wrapper">
+        <div class="logo">
+           <h1> <span>P</span>Paccy</h1>
+        </div>
+        <ul class="nav-area" >
+        <li><a href="/index.html">Home</a> </li>
+        <li><a href="/index.html">About Me</a> </li>  
+        <li><a href="contact.html">Contact</a> </li>  
+        <li><a href="/blogpage.html">Article</a></li>
+        <li><button onclick="location.href='login.html';" >Log In</button> </li>
+        </ul>
+    </div>
     <section class="contact">
     <div class="content">
         <h1>Contact Us</h1>
@@ -84,5 +96,8 @@
         </div>
     </div>
     </section>
+    <footer>
+        <h3><span class="copyright">© Copyright</span>2022 PPaccy</h3>
+    </footer>
 </body>
 </html>
