--- a/login.html
+++ b/login.html
@@ -15,8 +15,8 @@
            <h1> <span>P</span>Paccy</h1>
         </div>
         <ul class="nav-area" >
-        <li><a href="">Home</a> </li>
-        <li><a href="">About Me</a> </li>  
+        <li><a href="/index.html">Home</a> </li>
+        <li><a href="/index.html">About Me</a> </li>  
         <li><a href="contact.html">Contact</a> </li>  
         <li><a href="/blogpage.html">Article</a></li>
         <li><button onclick="location.href='login.html';" >Log In</button> </li>
